--- a/pxmPaciente.html
+++ b/pxmPaciente.html
@@ -10,8 +10,8 @@
     <script src="script.js"></script>
 <div class="container">
     
-    <div id="resultado">
-
+    <div class="resultado" id="resultado">
+        <button type="submit" onclick="clickPeek()">Verificar atendimento</button>
     </div>
     
     <a href="projeto.html">
